<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transport.transpotation.MainActivity"
    android:background="@drawable/background2"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:background="#fc483d8b"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/separate0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separate"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/split"
            android:textSize="26sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:padding="20dp" />
    </RelativeLayout>
    <View
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:background="@drawable/car"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/choose"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/teamNumber"
            android:textColor="#000000"
            android:textSize="26sp" />
        <Spinner
            android:id="@+id/spin_TeamNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:gravity="center"
            android:background="@drawable/spbg"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/carNumber"
            android:textColor="#000000"
            android:textSize="26sp"  />
        <Spinner
            android:id="@+id/spin_CarNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/spbg"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <Button
        android:id="@+id/button_affirm"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_bg1"
        android:text="@string/affirm"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

</LinearLayout>
</LinearLayout>
</ScrollView>