<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transport.transpotation.SingleCarActivity"
   >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transport.transpotation.SingleCarActivity"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_alignParentTop="true"
    android:background="#fc483d8b"
    >
    <TextView
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/back"
        android:padding="20dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/back"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:drawablePadding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/separate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separate"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:drawableRight="@drawable/split"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:padding="20dp" />

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <View
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@drawable/car"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/car_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="26sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#64bfbfbf"
        android:orientation="vertical">

        <TextView
            android:layout_width="700dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg2"
            android:gravity="center"
            android:text="@string/speed"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/speed"
                android:gravity="center"
                android:text="@string/speedE"
                android:textColor="#fc483d8b"
                android:textSize="23sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/get_speed"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="30dp"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/speedUnits"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/quick_set_speed"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/quickset"
                android:gravity="center"
                android:textColor="#ff8c00" />
            <ImageButton
                android:id="@+id/speed_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:textColor="#ff8c00" />
        </LinearLayout>

        <TextView
            android:id="@+id/button"
            android:layout_width="700dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg2"
            android:gravity="center"
            android:text="@string/drivingDistance"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/distance"
                android:gravity="center"
                android:text="@string/drivingDistanceE"
                android:textColor="#fc483d8b"
                android:textSize="23sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/get_distance"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="30dp"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/distanceUnits"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:id="@+id/quick_set_distance"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/quickset"
                android:gravity="center"
                android:textColor="#ff8c00" />


            <ImageButton
                android:id="@+id/distance_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:text="@string/speedUnits"
                android:textColor="#ff8c00"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/affirmButton"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_bg1"
                android:text="@string/affirm"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#bfbfbf"
        />
</LinearLayout>
    </ScrollView>