<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transport.transpotation.SingleCarActivity"
    android:orientation="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transport.transpotation.SingleCarActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:background="#fc483d8b"
        >
        <TextView
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:padding="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/back"
            android:textSize="26sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:drawablePadding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/separate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separate"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/split"
            android:textSize="26sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:padding="20dp" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical">
        <View
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:background="@drawable/car"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/car_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="26sp" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#bfbfbf"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#64bfbfbf"
        android:orientation="vertical">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="720dp"
            android:layout_height="650dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
               >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/speed"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/speed"
                        android:textColor="#fc483d8b"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/speed_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableRight="@drawable/edit1"
                        android:drawablePadding="12dp"
                        android:textColor="#fc483d8b"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <TextView
                    android:layout_width="3dp"
                    android:layout_height="150dp"
                    android:background="#483d8b"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="3dp"
                        android:drawableLeft="@drawable/angle"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/angle"
                        android:textColor="#fc483d8b"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/angle_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableRight="@drawable/edit1"
                        android:drawablePadding="12dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#fc483d8b"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <TextView
                    android:layout_width="3dp"
                    android:layout_height="150dp"
                    android:background="#483d8b"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/stop_set"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/stop"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/stop"
                        android:textColor="#fc483d8b"
                        android:textSize="30sp" />

                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#483d8b"/>
            <com.transport.transpotation.CircleView
                android:id="@+id/cvm"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    </ScrollView>